# iced-xml

./: Cargo.toml  LICENSE  README.md
examples/counter/: Cargo.toml
examples/counter/src/: counter.ixml  main.rs
examples/todos/: Cargo.toml
examples/todos/src/: Task.ixml  Todos.ixml  main.rs
iced-xml-core/: Cargo.toml
iced-xml-core/src/: component.rs  lib.rs  node.rs
iced-xml-derive/: Cargo.toml
iced-xml-derive/src/: lib.rs  view.rs
iced-xml-parse/: Cargo.toml
iced-xml-parse/src/: control.rs  lib.rs  main.rs  main_window.ixml  parser.rs
iced-xml-preview/: Cargo.toml
iced-xml-preview/src/: hello_world.ixml  main.rs  preview.rs
